# dotenv

./: .gitignore  README.md  pyproject.toml
.github/: workflows
.github/workflows/: python-package.yml
dotenv/: __init__.py  constants.py  extract.py  interpolate.py  load.py  parse.py  read.py
dotenv/tests/: test_extract.py  test_interpolate_values.py  test_parse.py
tests/: test_dotenv.py
