[tool.poetry]
name = "dotenv"
version = "1.0.0"
description = "Provides a sane, configurable .env interface"
authors = ["Brian Bruggeman <bbruggeman@samba.tv>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = { git = "https://github.com/pytest-dev/pytest.git" }
black = "^19.10b0"
isort = "^5.0.7"
mypy = "^0.782"
coverage = "^5.2"
pytest-cov = "^2.10.0"
pytest-black = "^0.3.10"
pytest-isort = "^1.1.0"
pytest-xdist = "^1.33.0"
pytest-mypy = "^0.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 140
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
line_length = 140
indent = '    '
multi_line_output = 3
length_sort = false
combine_star = true
skip_glob = '''
    ./*.py
    __*.py
    __pycache__
    .pytest_cache
    .git
    .tox
    .eggs
    *.egg-info
    docs
    scripts
    alembic
'''
known_third_party = "ansible, boto3_type_annotations, cachetools, flask, flask_graphql, fuzzywuzzy, graphene, imdb, iso8601, orjson, pygments, pytest, sqlalchemy, sqlvalidator"
known_first_party = "cdr"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
testpaths = "dotenv tests"
addopts = "-p no:logging -q --cov=dotenv --isort --black --mypy"
norecursedirs = "*.egg .eggs *.egg-info .cache .git __pycache__ build dist* docs provision .pytest_cache"
